[package]
name = "clipboard-history"
version = "0.1.0"
authors = ["Tamás Táncos <tamas.tancos@emarsys.com>"]
edition = "2018"

[dependencies]
wayland-client = "0.23"
wayland-commons = "0.23"
smithay-client-toolkit = "0.6.1"
derive-new = "0.5"
os_pipe = "0.8.1"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
log = "0.4.6"

[dependencies.wayland-protocols]
version = "0.23"
features = ["client", "unstable_protocols"]
